fix: cropping of portrait photos closes #56

--- a/style/decoration/image-container.scss
+++ b/style/decoration/image-container.scss
@@ -24,7 +24,7 @@
 		box-sizing: border-box;
 
 		img {
-			object-fit: cover;
+			object-fit: contain;
 			aspect-ratio: 4/3;
 		}
 
